--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -1,7 +1,7 @@
 footer{
     background-color: white;
     height: 60px;
-    width: 100px;
+    width: 100%;
     border-top: 1px #CCCCCC;
     text-align: center;
     position: fixed;
