--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -5,3 +5,8 @@ body{
     font-size: 14px;
     font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
 }
+
+.container{
+    width: 1000px;
+    margin: 30px 50% 30px 50%;
+}
