--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -2,11 +2,13 @@
     background-color: white;
     height: 70px;
     width: 100%;
-    border: 1px #DDDDDD;
+    border: 1px solid #DDDDDD;
     border-radius: 4px;
+    align-items: center;
+    display: flex;
 }
 
-button{
+.search_button{
     font-size: 18px;
     background-color: #FF5A5F;
     color: #FFFFFF;
@@ -14,5 +16,5 @@ button{
     width: 20%;
     border: 0;
     border-radius: 4px;
-    
+    margin-left: 30px;
 }
