--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -6,6 +6,7 @@
     border-radius: 4px;
     align-items: center;
     display: flex;
+    padding: 0 30px;
 }
 
 .search_button{
@@ -16,5 +17,10 @@
     width: 20%;
     border: 0;
     border-radius: 4px;
-    margin-left: 30px;
+    margin-left: auto;
+    cursor: pointer;
+}
+
+.search_button:hover{
+    opacity: 0.9;
 }
