--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -27,6 +27,7 @@
 
 .locations,
 .amenities{
+    position: relative;
     height: 100%;
     width: 25%;
 }
@@ -49,4 +50,26 @@
     font-weight: 400;
     font-size: 14px;
     margin-top: 10px;
+}
+
+.popover{
+    display: none;
+    list-style: none;
+    background-color: #FAFAFA;
+    border: 1px solid #DDDDDD;
+    border-radius: 4px;
+}
+
+.locations:hover .popover,
+.amenities:hover .popover {
+    display: block;
+}
+
+.popover h2 {
+    font-size: 16px;
+    margin: 0;
+}
+
+.popover li {
+    margin: 5px 0;
 }
