--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -20,8 +20,43 @@
     justify-content: center;
 }
 
-.places article h2{
+.places .place h2{
     text-align: center;
     font-size: 30px;
     margin: auto;
+}
+
+.places .place .price_by_night{
+    color: #FF5A5F;
+    height: 60px;
+    width: 60px;
+    border: 4px solid #FF5A5F;
+    border-radius: 32px;
+    font-size: 30px;
+    text-align: center;
+}
+
+.places .place .information{
+    height: 80px;
+    border-top: 1px solid #DDDDDD;
+    border-bottom: 1px solid #DDDDDD;
+    
+}
+
+.places .place .information .max_guest,
+.places .place .information .number_rooms,
+.places .place .information .number_bathrooms{
+    width: 100px;
+}
+
+.places .place .information .max_guest{
+    background-image: url(../images/icon_group.png);
+}
+
+.places .place .information .number_rooms{
+    background-image: url(../images/icon_bed.png);
+}
+
+.places .place .information .number_bathrooms{
+    background-image: url(../images/icon_bath.png);
 }
