--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -16,8 +16,8 @@
     margin: 20px;
     border: 1px solid #FF5A5F;
     border-radius: 4px;
-    display: flex;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 .places .place h2{
@@ -26,37 +26,50 @@
     margin: auto;
 }
 
-.places .place .price_by_night{
+.price_by_night{
+    display: flex;
     color: #FF5A5F;
     height: 60px;
     width: 60px;
     border: 4px solid #FF5A5F;
-    border-radius: 32px;
+    border-radius: 50%;
     font-size: 30px;
-    text-align: center;
+    justify-content: center;
+	align-items: center;
+	padding: 5px;
+	margin-left: auto;
+	margin-bottom: 15px;
+}
+.information{
+    display: flex;
+	border-top: 1px solid #DDDDDD;
+	border-bottom: 1px solid #DDDDDD;
+	height: 80px;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
 }
 
-.places .place .information{
-    height: 80px;
-    border-top: 1px solid #DDDDDD;
-    border-bottom: 1px solid #DDDDDD;
-    
-}
-
-.places .place .information .max_guest,
-.places .place .information .number_rooms,
-.places .place .information .number_bathrooms{
-    width: 100px;
-}
-
-.places .place .information .max_guest{
+.max_guest{
     background-image: url(../images/icon_group.png);
 }
 
-.places .place .information .number_rooms{
+.number_rooms{
     background-image: url(../images/icon_bed.png);
 }
 
-.places .place .information .number_bathrooms{
+.number_bathrooms{
     background-image: url(../images/icon_bath.png);
+}
+
+.max_guest,
+.number_rooms,
+.number_bathrooms{
+    display: flex;
+	background-position: center top;
+	background-repeat: no-repeat;
+	height: 100%;
+	width: 100px;
+	align-items: flex-start;
+	justify-content: center;
 }
